# autocoder_2025.09

./: .env.example  .gitignore  .tdd_session.json  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  pytest.ini  requirements.txt
autocoder_cc/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  README.md  __init__.py  chaos.py  chaos_engineering_validation_report.json  coverage.json  data_model_consistency_fix_validation.md  exceptions.py  fix_component_async_issues.py  gemini-review.md  generate_deployed_system.py  llm_generation_failure_investigation.md  lockfile.py  observability.py  phase4_validation_results.json  pytest.ini  requirements.txt  resource_orchestrator.py  resources.py  runtime_defaults.py  schemas.py  setup.py  validate_all_systems.py  validation.py
docs/: 5-minute-quickstart.md  ARCHIVE_MOVED_NOTICE.md  GOLDEN_STANDARD.md  MIGRATION_GUIDE.md  PropertyTestIntegration.md  README.md  architecture-overview.md  contributing.md  developer-guide.md  development-guide.md  error-handling-guide.md  file-organization-policy.md  implementation-gaps.md  quickstart.md  roadmap-overview.md  test-discrepancy-analysis.md  testing-plan.md
evidence/: Evidence_Level4_Achievement.md  Evidence_Validation_Investigation.md  INTEGRATION_AND_API_TEST_RESULTS.md  before_after_comparison.md  corrected_summary.md  diagnostic_20250902_145113.md  doublecheck_final.md  doublecheck_verification.md  e2e_test.md  e2e_test_after_fix.md  e2e_test_with_validation.md  final_verification.md  healer_fix_test.md  llm_complete_test.md  summary.md  task_completion_summary.md
(+1014 files in other folders)
