[project]
name = "autocoder_cc"
version = "0.1.0"
description = "A tool for generating and maintaining complex software systems using Large Language Models."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "litellm>=1.0.0",
    "python-dotenv>=1.0.0",
    "sentry-sdk>=1.40.0",
    "anyio>=3.6.0",
]

[tool.setuptools]
packages = ["autocoder_cc"] 